--- a/themes/hyde-hyde/layouts/partials/portfolio/content.html
+++ b/themes/hyde-hyde/layouts/partials/portfolio/content.html
@@ -30,14 +30,14 @@
         <div class="portfolio_content">
             <hr class="divider">
             {{ range (where .Data.Pages "Params.featured" "!=" true).ByDate.Reverse }}
-            <div class="row">
+<!--            <div class="row">-->
                 <div class="col-md-4 col-sm-4 col-xs-12" href="{{ .Params.link }}"
                     target="_blank" rel="noopener noreferrer">
                     {{ if .Params.screenshot }}
                         <img class="project__image img-responsive" src="{{ .Params.screenshot }}" alt="{{ .Title }}">
                     {{ end }}
                 </div>
-                <div class="col-md-8 col-sm-8 col-xs-12">
+<!--                <div class="col-md-8 col-sm-8 col-xs-12">-->
                     <span class="project__title">
                         <a href="{{ .Params.link }}" target="_blank" rel="noopener noreferrer">{{ .Title }}</a>
                     </span>
@@ -49,8 +49,8 @@
                     <span class="project__summary">
                         {{ .Content }}
                     </span>
-                </div>
-            </div>
+<!--                </div>-->
+<!--            </div>-->
             <div class="row-space">&nbsp;</div>
             {{ end }}
         </div>
